RESOLVED FIXED140948
REGRESSION(r178591): 20% regression in Octane box2d
https://bugs.webkit.org/show_bug.cgi?id=140948
Summary REGRESSION(r178591): 20% regression in Octane box2d
Michael Saboff
Reported 2015-01-27 11:53:06 PST
I believe that I made willResolveToArgumentsRegister() too restrictive on when we can't use the arguments register.
Attachments
Patch for Landing - reviewed in person. (1.54 KB, patch)
2015-01-27 12:14 PST, Michael Saboff
no flags
Michael Saboff
Comment 1 2015-01-27 11:53:52 PST
Michael Saboff
Comment 2 2015-01-27 12:14:07 PST
Created attachment 245459 [details] Patch for Landing - reviewed in person. Performance test results: Generating benchmark report at /Volumes/Data/src/webkit/Baseline_ArgsSpeedup_V8SpiderOctane_msaboff-pro_20150127_1207_report.txt And raw data at /Volumes/Data/src/webkit/Baseline_ArgsSpeedup_V8SpiderOctane_msaboff-pro_20150127_1207.json Benchmark report for V8Spider and Octane on msaboff-pro (MacPro5,1). VMs tested: "Baseline" at /Volumes/Data/src/webkit.baseline/WebKitBuild/Release/JavaScriptCore.framework/Versions/A/Resources/jsc "ArgsSpeedup" at /Volumes/Data/src/webkit/WebKitBuild/Release/JavaScriptCore.framework/Versions/A/Resources/jsc Collected 4 samples per benchmark/VM, with 4 VM invocations per benchmark. Emitted a call to gc() between sample measurements. Used 1 benchmark iteration per VM invocation for warm-up. Used the jsc-specific preciseTime() function to get microsecond-level timing. Reporting benchmark execution times with 95% confidence intervals in milliseconds. Baseline ArgsSpeedup V8Spider: crypto 72.3723+-1.7669 ? 72.6451+-1.2317 ? deltablue 112.3093+-4.1750 109.4640+-1.1189 might be 1.0260x faster earley-boyer 62.8467+-2.6278 62.0949+-1.1430 might be 1.0121x faster raytrace 46.8278+-0.5360 ^ 40.7990+-2.2191 ^ definitely 1.1478x faster regexp 95.0038+-1.2239 94.0562+-0.2997 might be 1.0101x faster richards 115.2778+-5.3954 113.8145+-1.8537 might be 1.0129x faster splay 47.5782+-3.6035 ? 48.3935+-1.4790 ? might be 1.0171x slower <arithmetic> 78.8880+-0.8313 ^ 77.3239+-0.3591 ^ definitely 1.0202x faster <geometric> * 74.2509+-0.4071 ^ 72.4026+-0.6576 ^ definitely 1.0255x faster <harmonic> 69.8161+-0.3718 ^ 67.5540+-1.0545 ^ definitely 1.0335x faster Baseline ArgsSpeedup Octane: encrypt 0.31826+-0.00621 ? 0.32239+-0.00534 ? might be 1.0130x slower decrypt 5.67187+-0.03230 ? 5.67794+-0.02059 ? deltablue x2 0.26549+-0.00733 0.26494+-0.00487 earley 0.98706+-0.01422 0.98068+-0.00719 boyer 8.84213+-0.23500 8.79115+-0.09154 navier-stokes x2 6.45035+-0.04989 6.41486+-0.01337 raytrace x2 1.89617+-0.00534 1.86997+-0.12254 might be 1.0140x faster richards x2 0.16955+-0.00206 0.16665+-0.00476 might be 1.0174x faster splay x2 0.52388+-0.01477 0.52011+-0.00737 regexp x2 45.04862+-0.64073 ? 45.71838+-0.87198 ? might be 1.0149x slower pdfjs x2 70.36549+-0.29415 ? 71.52163+-2.49187 ? might be 1.0164x slower mandreel x2 73.32669+-1.18600 ? 73.33962+-0.63429 ? gbemu x2 63.27088+-1.78430 62.73810+-0.55299 closure 0.74960+-0.00221 ? 0.75456+-0.00875 ? jquery 9.45089+-0.06624 ? 9.45695+-0.19931 ? box2d x2 22.77361+-0.25336 ^ 18.65764+-0.25051 ^ definitely 1.2206x faster zlib x2 683.33309+-4.18352 ? 686.91012+-19.77018 ? typescript x2 1107.77979+-23.04321 ? 1128.86298+-22.23050 ? might be 1.0190x slower <arithmetic> 139.21423+-1.45920 ? 140.66512+-2.23907 ? might be 1.0104x slower <geometric> * 9.82902+-0.02897 ^ 9.70225+-0.05371 ^ definitely 1.0131x faster <harmonic> 0.97964+-0.00566 0.97194+-0.01243 might be 1.0079x faster Baseline ArgsSpeedup All benchmarks: <arithmetic> 127.8012+-1.0760 ? 128.6816+-1.8686 ? might be 1.0069x slower <geometric> 14.4097+-0.0258 ^ 14.1909+-0.0474 ^ definitely 1.0154x faster <harmonic> 1.2043+-0.0069 1.1947+-0.0152 might be 1.0080x faster Baseline ArgsSpeedup Geomean of preferred means: <scaled-result> 85.4289+-0.1672 ^ 83.8128+-0.2473 ^ definitely 1.0193x faster
Michael Saboff
Comment 3 2015-01-27 12:25:02 PST
Note You need to log in before you can comment on or make changes to this bug.