REGRESSION(r178591): 20% regression in Octane box2d https://bugs.webkit.org/show_bug.cgi?id=140948

Reviewed by Geoffrey Garen.

Added check that we have a lexical environment to the arguments is captured check.
It doesn't make sense to resolve "arguments" when it really isn't captured.

* bytecompiler/BytecodeGenerator.cpp:
(JSC::BytecodeGenerator::willResolveToArgumentsRegister):


Canonical link: https://commits.webkit.org/158942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@179202 268f45cc-cd09-0410-ab3c-d52691b4dbfc